--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -92,7 +92,7 @@ body{
         right: 0;
         margin: 5px auto 0;
         max-width: fit-content;
-        max-width: -moz-fit-content;
+        max-width: -moz-max-content;
         max-width: -webkit-fit-content;
         text-align: center;
 
@@ -361,7 +361,7 @@ body{
     &__list{
         display: flex;
         max-width: fit-content;
-        max-width: -moz-fit-content;
+        max-width: -moz-max-content;
         max-width: -webkit-fit-content;
         margin: 0 auto 30px;
     }
