--- a/sass/sections/_homeInfoTiles.scss
+++ b/sass/sections/_homeInfoTiles.scss
@@ -39,7 +39,7 @@
     }
     .btn{
         max-width: fit-content;
-        max-width: -moz-fit-content;
+        max-width: -moz-max-content;
         max-width: -webkit-fit-content;
         margin: 15px auto 0;
     }
