--- a/sass/subpages/_blog.scss
+++ b/sass/subpages/_blog.scss
@@ -613,7 +613,7 @@ body.single-post{
         }
         a{
             max-width: fit-content;
-            max-width: -moz-fit-content;
+            max-width: -moz-max-content;
             max-width: -webkit-fit-content;
             margin: 0 auto;
         }
