--- a/sass/parts/_modalAdded.scss
+++ b/sass/parts/_modalAdded.scss
@@ -84,7 +84,7 @@
             text-align: center;
             color: #fff !important;
             max-width: fit-content;
-            max-width: -moz-fit-content;
+            max-width: -moz-max-content;
             max-width: -webkit-fit-content;
             padding: 4px 8px 2px;
             background: #6BC385;
@@ -108,7 +108,7 @@
         }
         .btn{
             max-width: fit-content;
-            max-width: -moz-fit-content;
+            max-width: -moz-max-content;
             max-width: -webkit-fit-content;
             height: 40px;
         }
@@ -145,7 +145,7 @@
         }
         &__products{
             width: fit-content;
-            width: -moz-fit-content;
+            width: -moz-max-content;
             width: -webkit-fit-content;
             min-width: auto;
             flex-wrap: nowrap;
