--- a/sass/sections/_homeHeader.scss
+++ b/sass/sections/_homeHeader.scss
@@ -26,7 +26,7 @@
         a{
             margin-top: 40px;
             max-width: fit-content;
-            max-width: -moz-fit-content;
+            max-width: -moz-max-content;
             max-width: -webkit-fit-content;
         }
     }
