--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -8,7 +8,7 @@
     }
     &__logo{
         width: fit-content;
-        max-width: -moz-fit-content;
+        max-width: -moz-max-content;
         max-width: -webkit-fit-content;
         text-align: center;
         max-height: 40px;
