--- a/sass/subpages/_pageShop.scss
+++ b/sass/subpages/_pageShop.scss
@@ -176,7 +176,7 @@
     }
     .btn{
         max-width: fit-content;
-        max-width: -moz-fit-content;
+        max-width: -moz-max-content;
         max-width: -webkit-fit-content;
         margin: 0 auto;
     }
