--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -138,7 +138,7 @@
                 }
                 .btn{
                     max-width: fit-content;
-                    max-width: -moz-fit-content;
+                    max-width: -moz-max-content;
                     max-width: -webkit-fit-content;
                     margin: 0 auto;
                 }
