--- a/css/custom.css
+++ b/css/custom.css
@@ -7580,6 +7580,15 @@ body.admin-bar .langSelector {
   .langSelector__wrap {
     max-width: 250px;
   }
+  .langSelector__back {
+    margin: 0 0 20px;
+  }
+  .langSelector__country {
+    margin: 0 0 10px;
+  }
+  .langSelector__country .name {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 575px) {
