--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -18,6 +18,7 @@
 @import 'subpages/tribe';
 @import 'subpages/products';
 @import 'subpages/pageShop';
+@import 'subpages/contact';
 
 /*  Sections
 -----------------*/
