--- a/sass/subpages/_pageShop.scss
+++ b/sass/subpages/_pageShop.scss
@@ -166,13 +166,28 @@
         font-weight: 600;
         color: #000 !important;
         text-align: center;
-        margin: 0 0 20px;
+        margin: 0;
         padding: 0 0 10px;
-        border-bottom: 1px solid #e0e0e0;
 
         &:hover{
             opacity: .7;
         }
+    }
+    &__price{
+        font-size: 18px;
+        line-height: 21px;
+        color: #616161;
+        text-align: center;
+        margin: 0 0 20px;
+        padding: 0 0 10px;
+        border-bottom: 1px solid #e0e0e0;
+
+        // span{
+        //     font-weight: 400;
+        //     span{
+        //         font-weight: inherit;
+        //     }
+        // }
     }
     .btn{
         max-width: fit-content;
