--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -411,6 +411,9 @@ body.postid-21695{
                 border-top: 1px solid #E6E6E6;
 
                 .vpe-img-td{
+                    .variation-image-id{
+                        display: none !important;
+                    }
                     .variation_title{
                         font-weight: 400;
                         text-align: left !important;
